[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest = "*"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = "3.0"